# zkWasm

./: Cargo.toml  README.md
crates/cli/: Cargo.toml  test_cli.sh
crates/cli/src/: app_builder.rs  args.rs  command.rs  exec.rs
crates/specs/: Cargo.toml
crates/specs/src/: itable.rs  lib.rs
crates/zkwasm/: Cargo.toml
crates/zkwasm/src/checksum/: mod.rs
crates/zkwasm/src/circuits/bit_table/: assign.rs  mod.rs
crates/zkwasm/src/circuits/etable/: allocator.rs  assign.rs  mod.rs
crates/zkwasm/src/circuits/etable/op_configure/: op_bin_bit.rs  op_unary.rs
crates/zkwasm/src/circuits/image_table/: assign.rs  mod.rs
crates/zkwasm/src/circuits/jtable/: assign.rs
crates/zkwasm/src/circuits/mtable/: allocator.rs  mod.rs
crates/zkwasm/src/circuits/test_circuit/: mod.rs
crates/zkwasm/src/continuation/: slice.rs
crates/zkwasm/src/loader/: mod.rs
crates/zkwasm/src/profile/: mod.rs
crates/zkwasm/src/runtime/: mod.rs  wasmi_interpreter.rs
src/: lib.rs
src/runtime/: wasmi_interpreter.rs
