[workspace]
members = ["crates/specs", "crates/zkwasm", "crates/cli"]
exclude = ["third-party/wasmi", "crates/playground"]

[workspace.dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
wasmi = { path = "third-party/wasmi" }
halo2aggregator-s = { git = "https://github.com/DelphinusLab/halo2aggregator-s.git", tag = "bisect-lookup-0.3.2", features = ["unsafe"] }
halo2_proofs = { git = "https://github.com/junyu0312/halo2", branch = "gpu", default-features = true }


[profile.dev]
opt-level = 3

[patch."https://github.com/DelphinusLab/halo2aggregator-s.git"]
halo2aggregator-s = { path = "./halo2aggregator-s", features = ["unsafe"] }

[patch."https://github.com/junyu0312/halo2"]
halo2_proofs = { path = "./halo2/halo2_proofs" }
